HelloUltraviolet/Fixtures/RejectedSource/Expressions/ExpressionDiagnosticsSupplement/Source/Main.uv
//! Rejected expression specimen for expression diagnostics supplement coverage.

public procedure expressionDiagnosticsSupplementReference() -> i32 {
    return true + 1
}
